# nlsn-delaunay-refine

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
example/: circle.json  circle_out.json  moon.json  moon_out.json  square_one.json  square_with_hole.json  traingle_one.json  wrench.json  wrench_out.json
scripts/: generate_coverage.sh  upload_coverage.sh
src/: .triangulationBuilder.rs.swp  Continence.rs  Orientation.rs  Triangle.rs  Triangulation.rs  Vertex.rs  area.rs  circumcenter.rs  continence.rs  distance.rs  edge.rs  encroachment.rs  lib.rs  main.rs  orientation.rs  triangle.rs  triangulation.rs  triangulationBuilder.rs  triangulator.rs  vertex.rs
src/elements/: bounding_box.rs  edge.rs  polyline.rs  triangle.rs  vertex.rs
src/glium_interface/: display.rs  edges.rs  mod.rs  triangles.rs  vertex.rs
src/json_serializar/: io.rs  mod.rs
src/json_serializar/models/: action.rs  input.rs  mod.rs  output.rs  point.rs  tesselations.rs
src/planar/: refine_params.rs  triangulation.rs  triangulation_data.rs  triangulator.rs
src/planar/procedures/: boundary.rs  hole.rs  segment.rs  vertices.rs
src/planar/refine_procedures/: encroachment.rs  triangle_split.rs
src/planar/triangulation_procedures/: boundary.rs  hole.rs  segment.rs  vertices.rs
src/properties/: angle.rs  area.rs  circumcenter.rs  continence.rs  distance.rs  dot.rs  encroachment.rs  intersection.rs  midpoint.rs  orientation.rs  parallel.rs
src/triangulator_interface/: domain_evaluator.rs  mod.rs
src/triangulator_interface/interpreter/: circle_parser.rs  mod.rs  polyline_parser.rs  refine_params_parser.rs  segments_parser.rs  vertices_parser.rs
