[package]
edition = "2018"
name = "nlsn-delaunay"
version = "0.1.1"
authors = ["nelson kenzo tamashiro <nelsonkenzotamashiro@gmail.com>"]
description = "Delaunay Triangulation and Refinement implementation through Bowyer Watson incremental insertion, conflict maps and ghost vertices."
homepage = "https://github.com/nelsonatgithub/nlsn-delaunay-refine"
documentation = "https://github.com/nelsonatgithub/nlsn-delaunay-refine"
repository = "https://github.com/nelsonatgithub/nlsn-delaunay-refine"
readme = "README.md"
license-file = "LICENSE"
keywords = ["triangulation", "delaunay", "Bowyer-Watson", "refinement", "incremental"]
categories = ["algorithms", "mathematics", "science", "simulation", "wasm"]
include = ["src/**/*.rs", "Cargo.toml"]

[badges]
codecov = { repository = "https://github.com/nelsonatgithub/nlsn-delaunay-refine", branch = "dev", service = "github" }
coveralls = { repository = "https://github.com/nelsonatgithub/nlsn-delaunay-refine", branch = "dev", service = "github" }
is-it-maintained-issue-resolution = { repository = "https://github.com/nelsonatgithub/nlsn-delaunay-refine" }
is-it-maintained-open-issues = { repository = "https://github.com/nelsonatgithub/nlsn-delaunay-refine" }

[dependencies]
nalgebra = "0.20"
num = "0.2.1"
float-cmp = "0.8.0"
